--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
+title: Visual Localization and Mapping Workshop
+description: ViLMA @ CVPR 2024
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
+plugins:
+  - jemoji
