--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Visual Localization and Mapping Workshop
-description: ViLMA @ CVPR 2024
+description: ViLMa @ CVPR 2024
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
